[workspace]
members = ["verify/"]

[package]
name = "verification-helper-lib"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
name = "lib"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verification-helper-math-divisors = { path = "crates/math/divisors" }
verification-helper-util-io = { path = "crates/util/io" }

