[package]
name = "library-rs-verify"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "verify"

[dependencies]
library-rs = { path = "../lib" }
paste = "1.0.15"
proconio = "0.4.5"

[[bin]]
name = "aoj_itp1_3_d"
path = "src/bin/aoj_itp1_3_d.rs"
doc = false




[[bin]]
name = "abc131_d"
path = "src/bin/abc131_d.rs"
doc = false

